--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <h1>
 <a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h1>
 
-<p>See the whole <a href="docs/README.md">documentation here</a>.</p>
+<p>See the whole <a href="https://github.com/crysalead/kahlan/blob/master/README.md">documentation here</a>.</p>
 
 <h1>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h1>
