Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ Kahlan allow stub or monkey patch your code directly like in Ruby or JavaScript 
 <p>Example of output:
 <img src="https://raw.githubusercontent.com/crysalead/kahlan/master/docs/assets/kahlan.png" alt="Kahlan"></p>
 
+<p>Example of detailed code coverage on a specific scope.
+<img src="docs/assets/code_coverage_example.png" alt="code_coverage_example"></p>
+
 <h1>
 <a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h1>
 
@@ -68,7 +71,7 @@ Kahlan allow stub or monkey patch your code directly like in Ruby or JavaScript 
 cd kahlan
 composer install
 bin/kahlan              # to run specs or,
-bin/kahlan --coverage=3 # to run specs with coverage info for namespaces, classes &amp; methods (require xdebug)
+bin/kahlan --coverage=4 # to run specs with coverage info for namespaces, classes &amp; methods (require xdebug)
 </code></pre>
       </section>
     </div>
