Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
           <h1>
 <a name="kahlan" class="anchor" href="#kahlan"><span class="octicon octicon-link"></span></a>Kahlan</h1>
 
-<p>Kahlan is a full-featured Unit/BDD Test Framework for PHP 5.4+, a la RSpec/JSpec using a Jasmine style notation.</p>
+<p>Kahlan is a full-featured Unit &amp; BDD test framework a la RSpec/JSpec using the <code>describe-it</code> syntax. It embraces the <a href="http://en.wikipedia.org/wiki/KISS_principle">KISS principle</a> and moves testing in PHP one step forward.</p>
 
-<p>It embrace the <a href="http://en.wikipedia.org/wiki/KISS_principle">KISS principle</a> and makes Unit/BDD testing fun again.</p>
+<p>Kahlan embrace the <a href="http://en.wikipedia.org/wiki/KISS_principle">KISS principle</a> and makes Unit &amp; BDD testing fun again.</p>
 
-<p><strong>Uniqueness:</strong>
-Kahlan allow stub or monkey patch your code directly like in Ruby or JavaScript without any required PECL-extentions.</p>
+<p><strong>Killer feature:</strong> Kahlan allow to stub or monkey patch your code directly like in Ruby or JavaScript without any required PECL-extentions.</p>
 
 <h1>
 <a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h1>
@@ -48,8 +47,8 @@ Kahlan allow stub or monkey patch your code directly like in Ruby or JavaScript 
 
 <ul>
 <li>PHP 5.4+</li>
-<li>Using an autoloader in your project (Composer for example)</li>
-<li>Xdebug if you want to perform code coverage analysis.</li>
+<li>Using Composer</li>
+<li>Xdebug if you want to perform code coverage analysis</li>
 </ul>
 
 <h1>
