Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="kahlan" class="anchor" href="#kahlan"><span class="octicon octicon-link"></span></a>Kahlan</h1>
+<a id="kahlan" class="anchor" href="#kahlan" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kahlan</h1>
 
-<p>Kahlan is a full-featured Unit &amp; BDD test framework a la RSpec/JSpec using the <code>describe-it</code> syntax. It embraces the <a href="http://en.wikipedia.org/wiki/KISS_principle">KISS principle</a> and moves testing in PHP one step forward.</p>
+<p>Kahlan is a full-featured Unit &amp; BDD test framework a la RSpec/JSpec using a <code>describe-it</code> syntax and moves testing in PHP one step forward.</p>
 
 <p>Kahlan embrace the <a href="http://en.wikipedia.org/wiki/KISS_principle">KISS principle</a> and makes Unit &amp; BDD testing fun again.</p>
 
 <p><strong>Killer feature:</strong> Kahlan allow to stub or monkey patch your code directly like in Ruby or JavaScript without any required PECL-extentions.</p>
 
 <h1>
-<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h1>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h1>
 
 <p>See the whole <a href="https://github.com/crysalead/kahlan/blob/master/docs/README.md">documentation here</a>.</p>
 
 <h1>
-<a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h1>
+<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Requirements</h1>
 
 <ul>
 <li>PHP 5.4+</li>
@@ -52,7 +52,7 @@
 </ul>
 
 <h1>
-<a name="screenshot" class="anchor" href="#screenshot"><span class="octicon octicon-link"></span></a>Screenshot</h1>
+<a id="screenshot" class="anchor" href="#screenshot" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshot</h1>
 
 <p>Example of output:
 <img src="https://raw.githubusercontent.com/crysalead/kahlan/master/docs/assets/kahlan.png" alt="Kahlan"></p>
@@ -61,7 +61,7 @@
 <img src="https://raw.githubusercontent.com/crysalead/kahlan/master/docs/assets/code_coverage_example.png" alt="code_coverage_example"></p>
 
 <h1>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h1>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h1>
 
 <pre><code>git clone git@github.com:crysalead/kahlan.git
 cd kahlan
